<resources>
    <string name="app_name">Jonosokti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_dialog">What are you looking for?</string>
    <string name="content_description">Image</string>

    <string name="servicepro">Service Provider</string>

    <!--
    On Boarding
-->
    <string name="get_started">Lets Get Started</string>
    <string name="add_to_cart">Add To Cart</string>

    <string name="products_cart">Products Cart</string>
    <string name="order_details">Order Details</string>

    <!--More Fragment -->
    <string name="more_share">Share</string>
    <string name="more_privacy">Privacy</string>
    <string name="more_rate">Rate Us</string>
    <string name="more_language">Language</string>

    <string name="more_language_text">Choose your desire language.</string>
    <string name="more_share_text">Share Boisabi with your friends</string>
    <string name="more_rate_text">Rate us our app in Play Store</string>
    <string name="more_privacy_text">Check privacy and policy</string>

    <string name="facebook_page">Facebook Page</string>
    <string name="facebook_page_details">Join our Facebook page for online support.</string>
    <!--
        Home Fragment
    -->
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <!--
        Category
    -->
    <string name="grocery">Grocery</string>
    <string name="medicine">Medicine</string>
    <string name="fresh_food">Fresh Food</string>
    <string name="others_products">Others Products</string>

    <!--
    Order
-->
    <string name="total_order">Total Order</string>
    <string name="total">Total Bill</string>
    <string name="checkout">Medicine</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="customer_name">Customer name</string>
    <string name="full_address">Full Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="resend_code">RESEND CODE</string>

    <!--others-->
    <string name="retry">Retry</string>
    <string name="verification_code">Verification Code</string>
    <string name="next_btn">Next</string>
    <string name="otp_details">To sign into your BazarSodai account, you have to first give your mobile number in below.</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="my_order">My Order</string>
    <!--ongoing property-->
    <string name="order_progress">Order Progress</string>
    <string name="order_cancel">Cancel Request</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="started">Work Started</string>
    <string name="Completed">Completed</string>
    <string name="orderFaq">Order FAQ</string>
    <string name="help">Need Our Help?</string>
    <string name="select">Select</string>
    <string name="preferred_time">Preferred Time</string>
    <string name="des">Description</string>
    <string name="rate">Rate</string>
    <string name="Qty">Quantity</string>
    <string name="amount">Amount</string>
    <string name="havepromo">Have Promo Code?</string>
    <string name="apply">Apply</string>
    <string name="details">Details</string>
    <string name="instruction">Any Intructions?</string>
    <string name="pay">Payment Option</string>
    <string name="invalid_otp">Invalid OTP Code.</string>
    <string name="delivery_detials">Delivery Details</string>

    <string name="about_us">About us\n\n
World is growing fast with economic and technical improvements. Every person is getting
engaged with economic activities to lead life. Most of the people in the family spend more
time out of the house to earn. Thus there are so many services in the house that need to be
fulfilled are not monitored. There are so many things and instruments we use for services in
the household. After a long time it needs to be repaired. Also sudden disturbance of
instruments makes life difficult. Such as electric service, carpenter service, etc. It needs to
be repaired as soon as possible. For the fulfillment the services people search for\n 1)
acquainted\n 2) most secured\n 3) best experienced\n 4) organized people.\n Our mission is to
support them through websites or mobile apps to find the best people for service.
In the context of COVID-19 pandemic there are many people who are losing their jobs from
different companies. And also there are many small service providers are also reducing
employment due to not getting jobs to done thus earning is lessen. There were remarkable
freelancer service providers who were servicing, are now lacking calls or jobs. There are
causes of not getting jobs/n 1) Do not have institutional marks or;\n 2) Do not have proper way
to contact them;\n 3) People are finding organized service providers. We are now going to
organize the service providers to fulfill above mentioned requirements in an online platform.
Mission
Solve the problems in accordance with people&#39;s needs.\n\n

        visit: www.jonosokti.com\n\n
        contact: 01857110557
    </string>
</resources>
