<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_order_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/order_placed"
            android:textColor="@color/color_gold"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textview_order_accepted"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textview_order_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_accepted"
            android:textColor="@color/color_green"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textview_order_placed"
            app:layout_constraintEnd_toStartOf="@+id/textview_work_started"
            app:layout_constraintStart_toEndOf="@+id/textview_order_placed"
            app:layout_constraintTop_toTopOf="@+id/textview_order_placed" />


        <TextView
            android:id="@+id/textview_work_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/started"
            android:textSize="12sp"
            android:textColor="@color/color_green"
            app:layout_constraintBottom_toBottomOf="@+id/textview_order_accepted"
            app:layout_constraintEnd_toStartOf="@+id/textview_completed"
            app:layout_constraintStart_toEndOf="@+id/textview_order_accepted"
            app:layout_constraintTop_toTopOf="@+id/textview_order_accepted" />

        <TextView
            android:id="@+id/textview_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Completed"
            android:textSize="12sp"
            android:textColor="@color/color_green"
            app:layout_constraintBottom_toBottomOf="@+id/textview_work_started"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toEndOf="@+id/textview_work_started"
            app:layout_constraintTop_toTopOf="@+id/textview_work_started" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/order_progress"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            tools:text="@string/order_cancel"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView1" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/textview_cancel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textview_cancel" />

        <View
            android:id="@+id/view10"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/checkbox_completed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/checkbox_placed"
            app:layout_constraintTop_toBottomOf="@+id/textview_order_accepted" />

        <View
            android:id="@+id/view9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/black"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/textview_cancel"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textview_time_placed" />

        <CheckBox
            android:id="@+id/checkbox_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:button="@drawable/selector_checkbox_placed"
            android:checked="false"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/view10"
            app:layout_constraintEnd_toEndOf="@+id/textview_order_placed"
            app:layout_constraintStart_toStartOf="@+id/textview_order_placed"
            app:layout_constraintTop_toTopOf="@+id/view10" />

        <CheckBox
            android:id="@+id/checkbox_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:button="@drawable/selector_checkbox_accepted"
            android:checked="false"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/view10"
            app:layout_constraintEnd_toEndOf="@+id/textview_order_accepted"
            app:layout_constraintStart_toStartOf="@+id/textview_order_accepted"
            app:layout_constraintTop_toTopOf="@+id/view10" />

        <CheckBox
            android:id="@+id/checkbox_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:button="@drawable/selector_checkbox_started"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/view10"
            app:layout_constraintEnd_toEndOf="@+id/textview_work_started"
            app:layout_constraintStart_toStartOf="@+id/textview_work_started"
            app:layout_constraintTop_toTopOf="@+id/view10" />

        <CheckBox
            android:id="@+id/checkbox_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:button="@drawable/selector_checkbox_complete"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/view10"
            app:layout_constraintEnd_toEndOf="@+id/textview_completed"
            app:layout_constraintStart_toStartOf="@+id/textview_completed"
            app:layout_constraintTop_toTopOf="@+id/view10" />

        <TextView
            android:id="@+id/textview_time_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Time Here"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_placed"
            app:layout_constraintStart_toStartOf="@+id/checkbox_placed"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_placed" />

        <TextView
            android:id="@+id/textview_time_accepted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Time Here"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_accepted"
            app:layout_constraintStart_toStartOf="@+id/checkbox_accepted"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_accepted" />

        <TextView
            android:id="@+id/textview_time_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Time Here"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_started"
            app:layout_constraintStart_toStartOf="@+id/checkbox_started"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_started" />

        <TextView
            android:id="@+id/textview_time_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="Time Here"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/checkbox_completed"
            app:layout_constraintStart_toStartOf="@+id/checkbox_completed"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_completed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>